[package]
name = "rustnish"
version = "0.11.0"
authors = [ "Klaus Purer <klaus.purer@protonmail.ch>" ]
edition = "2018"

[dependencies]
http = "*"
#hyper = ">=0.13.0-alpha.4"
hyper = { version = ">=0.13.0-alpha.4", features = ["unstable-stream"] }
error-chain = ">=0.11.0"
regex = ">=1"
futures-util = ">=0.3.1"
futures-preview = ">=0.3.0-alpha.19"
futures-util-a19 = { version = "=0.3.0-alpha.19", package = "futures-util-preview" }

[dev-dependencies]
#tokio-core = ">=0.1.8"
#rand = ">=0.4.1"
fake_clock = ">=0.3"
